--- a/ruleset/direct.yaml
+++ b/ruleset/direct.yaml
@@ -1,4 +1,5 @@
 payload:
+ - DOMAIN-SUFFIX,biliapi.net
  - DOMAIN-SUFFIX,steamcontent.com
 # - DOMAIN-SUFFIX,steampowered.com
  - DOMAIN-SUFFIX,steamserver.net
