--- a/ruleset/mainset.yaml
+++ b/ruleset/mainset.yaml
@@ -11,6 +11,7 @@ payload:
  - DOMAIN-SUFFIX,notion.so
  - DOMAIN-SUFFIX,overwolf.com
  - DOMAIN-SUFFIX,roland.com
+ - DOMAIN-SUFFIX,spiceworks.com
  - DOMAIN-SUFFIX,uhdpaper.com
  - DOMAIN-SUFFIX,weibo.com
 # Lite
