--- a/ruleset/mainset.yaml
+++ b/ruleset/mainset.yaml
@@ -1,5 +1,6 @@
 payload:
  - DOMAIN-SUFFIX,cc
+ - DOMAIN-SUFFIX,clashroyaleapp.com
  - DOMAIN-SUFFIX,co.jp
  - DOMAIN-SUFFIX,jp
  - DOMAIN-SUFFIX,blizzard.com
