--- a/ruleset/direct.yaml
+++ b/ruleset/direct.yaml
@@ -4,3 +4,6 @@ payload:
 # - DOMAIN-SUFFIX,steampowered.com
  - DOMAIN-SUFFIX,steamserver.net
  - DOMAIN,telemetry-in.battle.net
+ - DOMAIN-SUFFIX,mtcontent.rs    # Omega Ruby ROM download
+ - DOMAIN-SUFFIX,githubusercontent.com    # Omega Ruby ROM download
+
