--- a/ruleset/mainset.yaml
+++ b/ruleset/mainset.yaml
@@ -7,6 +7,7 @@ payload:
  - DOMAIN-SUFFIX,imei.info
  - DOMAIN-SUFFIX,linkedin.cn
  - DOMAIN-SUFFIX,media-imdb.com
+ - DOMAIN-SUFFIX,microsoft.com
  - DOMAIN-SUFFIX,nintendo.com
  - DOMAIN-SUFFIX,notion.so
  - DOMAIN-SUFFIX,overwolf.com
