--- a/ruleset/reject.yaml
+++ b/ruleset/reject.yaml
@@ -4,5 +4,5 @@ payload:
   - DOMAIN-SUFFIX,googleadservices.com
   - DOMAIN-SUFFIX,googlesyndication.com
 #  - DOMAIN-SUFFIX,gstatic.com
-  - DOMAIN-SUFFIX,ggpht.com
+#  - DOMAIN-SUFFIX,ggpht.com
   - DOMAIN-SUFFIX,wps.com
