--- a/ruleset/mainset.yaml
+++ b/ruleset/mainset.yaml
@@ -1,10 +1,11 @@
 payload:
- - DOMAIN-SUFFIX,cc
- - DOMAIN-SUFFIX,co.jp
- - DOMAIN-SUFFIX,jp
  - DOMAIN-SUFFIX,blizzard.com
+ - DOMAIN-SUFFIX,cc
+ - DOMAIN-SUFFIX,clash-cn.com
+ - DOMAIN-SUFFIX,co.jp
  - DOMAIN-SUFFIX,desmume.org
  - DOMAIN-SUFFIX,imei.info
+ - DOMAIN-SUFFIX,jp
  - DOMAIN-SUFFIX,linkedin.cn
  - DOMAIN-SUFFIX,media-imdb.com
  - DOMAIN-SUFFIX,microsoft.com
