--- a/ruleset/mainset.yaml
+++ b/ruleset/mainset.yaml
@@ -6,6 +6,7 @@ payload:
  - DOMAIN-SUFFIX,co.jp
  - DOMAIN-SUFFIX,desmume.org
  - DOMAIN-SUFFIX,eu
+ - DOMAIN-SUFFIX,hk
  - DOMAIN-SUFFIX,imei.info
  - DOMAIN-SUFFIX,jp
  - DOMAIN-SUFFIX,linkedin.cn
