--- a/ruleset/cn_proxy.yaml
+++ b/ruleset/cn_proxy.yaml
@@ -1,3 +1,40 @@
 payload:
  - DOMAIN-SUFFIX,bilibili.com
  - DOMAIN-SUFFIX,bilibili.tv
+# Apple
+ - DOMAIN-SUFFIX,apple.com.cn
+ - DOMAIN-SUFFIX,apple.com
+ - DOMAIN-SUFFIX,weather-data.apple.com
+ - DOMAIN-SUFFIX,icloud.com
+ - DOMAIN,testflight.apple.com
+ - DOMAIN,books.itunes.apple.com
+ - DOMAIN-SUFFIX,smoot.apple.com
+ - DOMAIN,beta.music.apple.com
+ - DOMAIN,lookup-api.apple.com
+ - DOMAIN,apps.apple.com
+ - DOMAIN,books.apple.com
+ - DOMAIN,itunes.apple.com
+ - DOMAIN,tv.apple.com
+ - DOMAIN,amp-api.podcasts.apple.com
+ - DOMAIN,bookkeeper.itunes.apple.com
+ - DOMAIN,gateway.icloud.com
+ - DOMAIN-SUFFIX,apple.news
+ - DOMAIN,news-assets.apple.com
+ - DOMAIN,news-client.apple.com
+ - DOMAIN,news-client-search.apple.com
+ - DOMAIN,news-edge.apple.com
+ - DOMAIN,news-events.apple.com
+ - DOMAIN,apple.comscoreresearch.com
+ - DOMAIN,appleid.apple.com
+ - DOMAIN,developer.apple.com
+ - DOMAIN,www.icloud.com
+ - DOMAIN,ocsp.apple.com
+ - DOMAIN-SUFFIX,apple.co
+ - DOMAIN-SUFFIX,apple.com
+ - DOMAIN-SUFFIX,apple-cloudkit.com
+ - DOMAIN-SUFFIX,appstore.com
+ - DOMAIN-SUFFIX,autonavi.com
+ - DOMAIN-SUFFIX,cdn-apple.com
+ - DOMAIN-SUFFIX,icloud-content.com
+ - DOMAIN-SUFFIX,me.com
+ - DOMAIN-SUFFIX,maps.apple.com
